# codename-plaza

./: Caddyfile  Cargo.toml  README.md  make.ps1  permissions.txt
crates/connector/: Cargo.toml
crates/connector/src/: lib.rs
crates/plaza-client/: .gitignore  Cargo.toml  README.md  Trunk.toml  index.css  index.html  package-lock.json  tailwind.config.js
crates/plaza-client/src/: api.rs  app.rs  authorization_state.rs  fatal_error.rs  main.rs  route_guard.rs  select_field.rs  suspense_screen.rs  text_field.rs
crates/plaza-client/src/icons/: alert_icon.rs  bar_chart_icon.rs  confilogi_icon.rs  headphones_icon.rs  loading_icon.rs  log_in_icon.rs  menu_icon.rs  mod.rs  repeat_icon.rs  unlock_icon.rs  user_minus_icon.rs  user_plus_icon.rs  x_icon.rs
crates/plaza-client/src/pages/: home.rs  login.rs  logout.rs  mod.rs  my_tickets.rs  page_not_found.rs  report_problem.rs
crates/plaza-client/src/pages/report/: mod.rs  report_onboarding.rs
crates/pure-plaza-client/: 404.html  emergency-sign-in.html  forgot-your-password.html  index.html  login.html  main.js  my-account.html  package-lock.json  package.json  report-problem.html  reported-problems.html  sign-in.html  sign-out.html  tailwind.css  tsconfig.json
crates/pure-plaza-client/administration/: company-departments.html  job-titles.html  (+1 more)
migrations/: 20250811192701_create_users_table.sql  20250811193752_create_sessions_table.sql  20250812010000_create_company_departments_table.sql  20250812010010_create_job_titles_table.sql  20250812073023_create_permissions_table.sql  20250812073031_create_roles_table.sql  20250812074201_seed_roles.sql  20250812074720_create_users_table.sql  20250812074730_create_authorization_tokens_table.sql  20250813102954_create_job_titles_table.sql  20250813103000_seed_company_departments.sql  20250813104042_seed_job_titles.sql  20250813130939_seed_company_departments.sql  20250826082024_create_external_permissions_table.sql  20250826083351_seed_external_permissions_table.sql  20250827114639_create_mailing_groups_table.sql  20250827114649_seed_mailing_groups_table.sql  20250905100000_create_system_permissions_table.sql  20250905100100_create_licenses_table.sql  20250905114122_create_job_titles_have_strict_onboarding_license_mappings_table.sql  20250905114257_create_job_titles_have_strict_onboarding_system_permissions_mappings_table.sql  20250905114257_create_job_titles_have_strict_onboarding_system_permissions_table.sql  20250906091044_create_license_incompatibility_map_table.sql  20250907134300_seed_licenses.sql  20250907134417_seed_job_titles_have_strict_onboarding_license_mappings.sql  20250907140459_seed_system_permissions.sql  20250908103755_seed_job_titles_have_strict_onboarding_system_permissions_mappings_table.sql  20250921115024_create_job_titles_have_permissions_table.sql  20250922053910_seed_permissions_table.sql
src/: handlers.rs  intranet.rs  intranet_sync.rs  main.rs  middlewares.rs  ms_graph.rs  templating.rs  uow.rs  validation.rs
views/: layout.rs.html  login.rs.html  reportonboarding.rs.html  reportproblem.rs.html  showcaselogin.rs.html
views/components/: AppHeader.rs.html  Button.rs.html  ChooseTextField.rs.html  ConfilogiIcon.rs.html  MenuIcon.rs.html  TextField.rs.html  UserMinusIcon.rs.html  UserPlusIcon.rs.html
(+63 files in other folders)
