[package]
name = "codename-plaza"
version = "0.1.0"
edition = "2024"

[dependencies]
url = "2.5.7"
axum = { version = "0.8.4", features = ["macros"] }
axum-cookie = "0.2.3"
axum-macros = "0.5.0"
bcrypt = "0.17.1"
chrono = { version = "0.4.41", features = ["serde"] }
clap = { version = "4.5.44", features = ["derive"] }
rand = "0.9.2"
rust-embed = "8.7.2"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.142"
sqlx = { version = "0.8.6", features = ["macros", "chrono", "postgres", "runtime-tokio"] }
tokio = { version = "1.47.1", features = ["full"] }
connector = { path = "./crates/connector", features = ["server-side"] }
email_address = "0.2.9"
reqwest = { version = "0.12.23", features = ["http2", "native-tls-alpn"] }
tokio-util = "0.7.16"
curl = "0.4.49"
