[package]
name = "plaza-client"
version = "0.1.0"
edition = "2021"
description = "Template for starting a Yew project using Trunk"
readme = "README.md"
repository = "https://github.com/yewstack/yew-trunk-minimal-template"
license = ""
keywords = ["yew", "trunk"]
categories = ["gui", "wasm", "web-programming"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
yew = { version="0.21", features=["csr"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt"] }
tracing-web = "0.1"
wasm-logger = "0.2.0"
log = "0.4.27"
yew-router = "0.18.0"
js-sys = "0.3.77"
wasm-bindgen-futures = "0.4.50"
web-sys = "0.3.77"
gloo-net = { version = "0.6.0", features = ["json"] }
connector = { path = "../connector", features = ["server-side"] }
futures = "0.3.31"
gloo-timers = "0.3.0"
thiserror = "2.0.16"
gloo-storage = "0.3.0"
gloo-utils = "0.2.0"
